# sartracker-web

./: .env.mock  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  CODEX_START.md  DEPLOY.md  OVERVIEW.md  README.md  electron-builder.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  refactor_oppertunities.md  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts  vitest.config.ts
.beads/: issues.jsonl
.github/workflows/: electron-linux-validation.yml  electron-release.yml  release.yml
api/: devices.js  positions.js  session.js
api-lib/: traccar-proxy.js
docs/: areas-to-investigate.md  bead-readiness.md  desktop-runtime-support-policy.md  electron-beta-handoff.md  hosted-browser-testing-plan.md  mission-preview-external-resources-decision.md  official-map-mbtiles-spike-don-103.md  official-map-national-package-measurement-don-108.md  official-map-offline-strategy.md  official-map-terrain-overlays-don-82.md  offline-map-resilience.md  other-risks.md  plugin-parity-matrix.md  settings-access-control-decision.md  spike-execution-plan.md  tauri-beta-release-plan.md  team-testing-feedback-loop.md  traccar-websocket-design.md  two-track-execution-workplan.md  web-operator-verification-checklists.md  web-parity-verification-matrix.md
docs/releases/: README.md  TEMPLATE.md  beta12-autosave-freeze-fix.md  beta12-mint-hang-capture-runbook.md  beta12-mission-store-baseline.md  beta12-redundant-write-removal.md  beta12-storage-diagnostics-evidence.md  beta12-tracking-soak-evidence.md  sartracker-electron-0.1.0-beta.10.md  sartracker-electron-0.1.0-beta.11.md  sartracker-electron-0.1.0-beta.12.md  sartracker-electron-0.1.0-beta.4.md  sartracker-electron-0.1.0-beta.5.md  (+8 more)
electron/: crash-log.cjs  diagnostic-sanitizer.cjs  file-system.cjs  main.cjs  mission-store.cjs  official-map-proxy.cjs  preload.cjs  runtime-files.cjs  runtime-log.cjs  settings-store.cjs  sqlite-backup-runner.cjs  sqlite-backup-worker.cjs  sqlite-snapshot-sanity.cjs  storage-diagnostics-format.cjs  storage-diagnostics-state.cjs  storage-diagnostics.cjs  tracking-soak-validation.cjs  zip-archive.cjs
field-tools/: sartracker-linux-hang-collector-lib.cjs  sartracker-linux-hang-collector.cjs  sartracker-linux-hang-collector.sh
handoff/: HANDOFF.md
public/: sw.js
research/: R1-osi-maps-offline.md  R2-irish-grid-accuracy.md  R3-traccar-websocket.md
scripts/: beta-verify.mjs  check-bundle-size.mjs  electron-bad-secret-smoke.mjs  electron-map-freeze-probe.mjs  electron-mission-store-freeze-probe.mjs  electron-official-map-offline-smoke.mjs  electron-package.mjs  electron-storage-diagnostics-kill-probe.mjs  electron-tracking-soak-ci.mjs  electron-tracking-soak.mjs  generate-app-version.mjs  seed-mission-store.mjs  visual-review.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: diagnostics.rs  gpx.rs  lib.rs  main.rs  opener.rs  persistence.rs  settings.rs  traccar_http.rs  tracking_cache.rs
(+536 files in other folders)
