[package]
name = "sartracker-web"
version = "0.1.0"
description = "Standalone SAR Tracker desktop application for Kerry Mountain Rescue Team"
authors = ["Donal O'Callaghan"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sartracker_web_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
keyring = "3.6.3"
open = "5.3.2"
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "rustls-tls"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
